Update template to be Rails 8 friendly
- Adapt template to be Rails 8 compliant
- Replace deprecated `annotate` by `annotaterb`
- Use `letter_opener_web` to have a dashboard of sent email
- Add `mission_control-job` to display enqueued jobs
- Remove custom database configuration to use default one
- Remove Sorcery monkey patch
- Adapt stylesheets
- Fix Rubocop offenses

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,9 +9,12 @@ require:
 AllCops:
   SuggestExtensions: false
   Exclude:
-    - 'db/schema.rb'
-    - 'vendor/**/*'
-    - 'tmp/**/*'
+    - "bin/*"
+    - "db/*schema.rb"
+    - "lib/generators/**/*"
+    - "node_modules/**/*"
+    - "vendor/**/*"
+    - "tmp/**/*"
 
 Rails/I18nLocaleTexts:
   Enabled: false
